--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,13 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.1.0</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/>
     </parent>
     <groupId>com.example.jjdzr11</groupId>
-    <artifactId>Zadanie4-web-mvc</artifactId>
+    <artifactId>Tool-Box-App</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>Zadanie4-web-mvc</name>
-    <description>Zadanie domowe 4 Spring web mvc</description>
+    <name>Tool-Box-App</name>
+    <description>Technician Toolbox</description>
     <properties>
         <java.version>17</java.version>
     </properties>
